2003-05-01  Alif Wahid  <awah005@users.sourceforge.net>

	* gtk/gtkgl/apputils.py (GLApplication.__init__): Don't set
	resize_mode RESIZE_IMMEDIATE on Win32.

2003-04-30  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkgl/apputils.py (GLArea.__init__): Use connect_after()
	instead of connect() to connect 'realize' signal handler.

	* examples/gears-func.py:
	* examples/gears-darea.py:
	* examples/teapot.py:
	* examples/low-level.py (LowLevelDemo.__init__):
	* examples/simple.py (SimpleDemo.__init__):
	* examples/simple-mixed.py (SimpleMixedDemo.__init__):
	* examples/color.py (ColorManagementDemo.__init__):
	Use connect_after() instead of connect() to connect 'realize'
	signal handler.

2003-04-30  Alif Wahid  <awah005@users.sourceforge.net>

	Added new example program color.py, it's a mapping
	from C to Python of the color.c program written by
	Naofumi for GtkGLExt. Currently experimental as some
	necessary exceptions are not handled yet. I'll add
	those soon.

	* examples/color.py
	* examples/Makefile.am
	* AUTHORS: Added new example color.py

2003-04-28  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Version 0.0.3

	* configure.in: Bumped version.

	* dsextras.py (BuildExt.modify_compiler): Added to modify default
	compiler settings. Remove -static linker option if mingw32
	compiler is used on Win32.
	(BuildExt.build_extensions): Call self.modify_compiler().

2003-04-27  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/*.py: Check required PyGTK version.

	* examples/gears-func.py: 
	* examples/gears-darea.py: 
	* examples/teapot.py: 
	* examples/teapot2.py (TeapotWindow.__init__): 
	* examples/low-level.py (LowLevelDemo.__init__): 
	* examples/simple.py (SimpleDemo.__init__): 
	* examples/simple-mixed.py (SimpleMixedDemo.__init__): 
	* examples/pixmap.py (PixmapDemo.__init__): 
	* examples/pixmap-mixed.py (PixmapMixedDemo.__init__): Don't set
	resize_mode RESIZE_IMMEDIATE on Win32.
