@@ -132,6 +132,9 @@ class MoveLight (GLScene):
 
 
 if __name__ == '__main__':
+	# add MODE_DEPTH to the default display mode
+	GLArea.default_display_mode |= gtk.gdkgl.MODE_DEPTH
+    
 	glscene = MoveLight()
 
 	glapp = GLApplication(glscene)
