@@ -213,6 +213,9 @@ class NeHe6Multi (GLScene):
 
 
 if __name__ == '__main__':
+	# add MODE_DEPTH to the default display mode
+	GLArea.default_display_mode |= gtk.gdkgl.MODE_DEPTH
+    
 	glscene = NeHe6Multi()
 
 	glapp = GLApplication(glscene)
